--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@formkit/auto-animate": "^1.0.0-beta.1",
+    "@formkit/auto-animate": "^0.7.0",
+    "@headlessui/react": "^1.7.16",
     "@reduxjs/toolkit": "^1.8.0",
     "@types/debounce": "^1.2.1",
     "@types/nprogress": "^0.2.0",
@@ -20,13 +21,16 @@
     "@types/react-transition-group": "^4.4.4",
     "animate.css": "^4.1.1",
     "axios": "^0.26.0",
+    "dayjs": "^1.11.9",
     "debounce": "^1.2.1",
     "formik": "^2.2.9",
     "mongodb": "^4.4.0",
     "next": "12.1.0",
     "nprogress": "^0.2.0",
+    "openai": "^3.3.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^4.3.1",
     "react-image-zoom": "^1.3.1",
     "react-paginate": "^8.1.2",
@@ -39,7 +43,7 @@
     "swiper": "^8.0.7",
     "swr": "^1.2.2",
     "yup": "^0.32.11",
-    "zustand": "^3.7.1"
+    "zustand": "^4.3.6"
   },
   "devDependencies": {
     "@types/node": "17.0.19",
